Left box move and remove done

--- a/index.html
+++ b/index.html
@@ -36,42 +36,68 @@
                         <div class="col-12 d-flex justify-content-center">
                             <!-- ITEM 1 -->
                             <ul class="">
-                                <li class="d-flex justify-content-between">
+                                <li class="d-flex justify-content-between" id="item1">
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Tvätta</h4>
+                                        <h4 id="chore1">Tvätta</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Prio 1</h4>
+                                        <h4 id="prio1">Prio 1</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary">Klart</button>
-                                        <button class="btn btn-danger">Ta bort</button>
+                                        <button class="btn btn-primary" id="add1">Klart</button>
+                                        <button class="btn btn-danger" id="remove1">Ta bort</button>
                                     </div>
                                 </li>
                                 <!-- ITEM 2 -->
-                                <li class="d-flex justify-content-between">
+                                <li class="d-flex justify-content-between" id="item2">
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Laga mat</h4>
+                                        <h4 id="chore2">Laga mat</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Prio 3</h4>
+                                        <h4 id="prio2">Prio 3</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary">Klart</button>
-                                        <button class="btn btn-danger">Ta bort</button>
+                                        <button class="btn btn-primary" id="add2">Klart</button>
+                                        <button class="btn btn-danger" id="remove2">Ta bort</button>
                                     </div>
                                 </li>
                                 <!-- ITEM 3 -->
-                                <li class="d-flex justify-content-between">
+                                <li class="d-flex justify-content-between" id="item3">
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Diska</h4>
+                                        <h4 id="chore3">Diska</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <h4>Prio 2</h4>
+                                        <h4 id="prio3">Prio 2</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary">Klart</button>
-                                        <button class="btn btn-danger">Ta bort</button>
+                                        <button class="btn btn-primary" id="add3">Klart</button>
+                                        <button class="btn btn-danger" id="remove3">Ta bort</button>
+                                    </div>
+                                </li>
+                                <!-- ITEM 4 -->
+                                <li class="d-flex justify-content-between" id="item4">
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4 id="chore4">Dammsug</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4 id="prio4">Prio 2</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <button class="btn btn-primary" id="add4">Klart</button>
+                                        <button class="btn btn-danger" id="remove4">Ta bort</button>
+                                    </div>
+                                </li>
+                                <!-- ITEM 5 -->
+                                <li class="d-flex justify-content-between" id="item5">
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4 id="chore5">Mata katten</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4 id="prio5">Prio 2</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <button class="btn btn-primary" id="add5">Klart</button>
+                                        <button class="btn btn-danger" id="remove5">Ta bort</button>
                                     </div>
                                 </li>
                             </ul>
@@ -87,23 +113,31 @@
                         </div>
                         <div class="col-12 d-flex justify-content-between">
                             <!-- ITEM 1 -->
-                            <ul class="d-flex flex-column justify-content-between">
-                                <li class="d-flex justify-content-center">
-                                    <div class="col-6 d-flex justify-content-center">
-                                        <h4>Städa</h4>
+                            <ul class="d-flex flex-column justify-content-between" id="donelist">
+                                <!-- <li class="d-flex justify-content-between">
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4>Sova</h4>
                                     </div>
-                                    <div class="col-6 d-flex justify-content-center">
-                                        <button class="btn btn-danger">Ångra</button>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4>Prio 1</h4>
                                     </div>
-                                </li>
-                                <li class="d-flex justify-content-center">
-                                    <div class="col-6 d-flex justify-content-center">
-                                        <h4>Städa bilen</h4>
-                                    </div>
-                                    <div class="col-6 d-flex justify-content-center">
-                                        <button class="btn btn-danger">Ångra</button>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <button class="btn btn-warning" id="regret1">Ångra</button>
+                                        <button class="btn btn-danger" id="remove4">Ta bort</button>
                                     </div>
                                 </li>
+                                <li class="d-flex justify-content-between">
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4>Rensa avloppet</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <h4>Prio 3</h4>
+                                    </div>
+                                    <div class="col-4 d-flex justify-content-center">
+                                        <button class="btn btn-warning">Ångra</button>
+                                        <button class="btn btn-danger">Ta bort</button>
+                                    </div>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -129,7 +163,6 @@
                                     <option value="2">2</option>
                                     <option value="3">3</option>
                                   </select>
-                                <!-- <input type="number" maxlength="1" class="form-control" id="priority" required>  -->
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-12 col-lg-4">
