--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-fluid p-0">
         <!-- HEADER -->
         <header>
-            <div class="row">
+            <div class="row p-0 m-0">
                 <div class="col-12 test d-flex justify-content-center align-items-center">
                     <h1>
                         To-do list
