--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col-12 d-flex justify-content-center">
                             <!-- ITEM 1 -->
-                            <ul class="">
+                            <ul id="dolist">
                                 <li class="d-flex justify-content-between" id="item1">
                                     <div class="col-4 d-flex justify-content-center">
                                         <h4 id="chore1">Tvätta</h4>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="col-12 col-lg-4">
                                 <label for="priority" class="form-label">Prioritet</label>
-                                <select class="form-select" aria-label="priority">
+                                <select class="form-select" aria-label="priority" id="priority">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-12 col-lg-4">
-                                    <button class="large-btn btn btn-primary w-100" type="submit">Lägg till</button>
+                                    <button class="large-btn btn btn-primary w-100" type="button" id="submit">Lägg till</button>
                                 </div>
                                 <div class="col-12 col-lg-4">
                                     <button class="large-btn btn btn-danger w-100" type="reset">Rensa</button>
