--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                             </h3>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
-                            <!-- ITEM 1 -->
                             <ul id="dolist">
+                                <!-- ITEM 1 -->
                                 <li class="d-flex justify-content-between" id="item1">
-                                    <div class="col-4 d-flex justify-content-center">
+                                    <div class="col-4 d-flex justify-content-start align-items-center">
                                         <h4 id="chore1">Tvätta</h4>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio1">Prio 1</h4>
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
+                                        <h5 id="prio1">Prio 1</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add1">Klart</button>
@@ -50,11 +50,11 @@
                                 </li>
                                 <!-- ITEM 2 -->
                                 <li class="d-flex justify-content-between" id="item2">
-                                    <div class="col-4 d-flex justify-content-center">
+                                    <div class="col-4 d-flex justify-content-start align-items-center">
                                         <h4 id="chore2">Laga mat</h4>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio2">Prio 3</h4>
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
+                                        <h5 id="prio2">Prio 3</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add2">Klart</button>
@@ -63,11 +63,11 @@
                                 </li>
                                 <!-- ITEM 3 -->
                                 <li class="d-flex justify-content-between" id="item3">
-                                    <div class="col-4 d-flex justify-content-center">
+                                    <div class="col-4 d-flex justify-content-start align-items-center">
                                         <h4 id="chore3">Diska</h4>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio3">Prio 2</h4>
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
+                                        <h5 id="prio3">Prio 2</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add3">Klart</button>
@@ -76,11 +76,11 @@
                                 </li>
                                 <!-- ITEM 4 -->
                                 <li class="d-flex justify-content-between" id="item4">
-                                    <div class="col-4 d-flex justify-content-center">
+                                    <div class="col-4 d-flex justify-content-start align-items-center">
                                         <h4 id="chore4">Dammsug</h4>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio4">Prio 2</h4>
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
+                                        <h5 id="prio4">Prio 2</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add4">Klart</button>
@@ -89,11 +89,11 @@
                                 </li>
                                 <!-- ITEM 5 -->
                                 <li class="d-flex justify-content-between" id="item5">
-                                    <div class="col-4 d-flex justify-content-center">
+                                    <div class="col-4 d-flex justify-content-start align-items-center">
                                         <h4 id="chore5">Mata katten</h4>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio5">Prio 2</h4>
+                                    <div class="col-4 d-flex justify-content-center align-items-center">
+                                        <h5 id="prio5">Prio 2</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add5">Klart</button>
@@ -103,6 +103,7 @@
                             </ul>
                         </div>
                     </div>
+                    <button class="btn btn-primary w-100" id="sortbutton">Sortera i bokstavsordning</button>
                 </div>
                 <div class="box col-10 col-lg-5 border border-success">
                     <div class="row">
