--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <!-- MAIN -->
-            <div class="row justify-content-evenly">
+            <div class="row justify-content-evenly m-0">
                 <div class="box col-10 col-lg-5 border border-danger">
                     <div class="row">
                         <!-- LEFT BOX -->
@@ -67,7 +67,7 @@
                                         <h4 id="chore3">Diska</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center align-items-center">
-                                        <h5 id="prio3">Prio 2</h5>
+                                        <h5 id="prio3">Prio 5</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add3">Klart</button>
@@ -93,7 +93,7 @@
                                         <h4 id="chore5">Mata katten</h4>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center align-items-center">
-                                        <h5 id="prio5">Prio 2</h5>
+                                        <h5 id="prio5">Prio 4</h5>
                                     </div>
                                     <div class="col-4 d-flex justify-content-center">
                                         <button class="btn btn-primary" id="add5">Klart</button>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center m-0">
                 <div class="box col-10 border border-warning d-flex flex-column align-items-center">
                     <div class="col-12 d-flex justify-content-center">
                         <h3>
@@ -140,6 +140,8 @@
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
+                                    <option value="5">4</option>
+                                    <option value="5">5</option>
                                   </select>
                             </div>
                             <div class="row justify-content-center">
