--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <!-- MAIN -->
-            <div class="row justify-content-evenly">
+            <div class="row justify-content-evenly m-0">
                 <div class="box col-10 col-lg-5 border border-danger">
                     <div class="row">
                         <!-- LEFT BOX -->
@@ -34,75 +34,13 @@
                             </h3>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
-                            <!-- ITEM 1 -->
                             <ul id="dolist">
-                                <li class="d-flex justify-content-between" id="item1">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="chore1">Tvätta</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio1">Prio 1</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary" id="add1">Klart</button>
-                                        <button class="btn btn-danger" id="remove1">Ta bort</button>
-                                    </div>
-                                </li>
-                                <!-- ITEM 2 -->
-                                <li class="d-flex justify-content-between" id="item2">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="chore2">Laga mat</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio2">Prio 3</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary" id="add2">Klart</button>
-                                        <button class="btn btn-danger" id="remove2">Ta bort</button>
-                                    </div>
-                                </li>
-                                <!-- ITEM 3 -->
-                                <li class="d-flex justify-content-between" id="item3">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="chore3">Diska</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio3">Prio 2</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary" id="add3">Klart</button>
-                                        <button class="btn btn-danger" id="remove3">Ta bort</button>
-                                    </div>
-                                </li>
-                                <!-- ITEM 4 -->
-                                <li class="d-flex justify-content-between" id="item4">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="chore4">Dammsug</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio4">Prio 2</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary" id="add4">Klart</button>
-                                        <button class="btn btn-danger" id="remove4">Ta bort</button>
-                                    </div>
-                                </li>
-                                <!-- ITEM 5 -->
-                                <li class="d-flex justify-content-between" id="item5">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="chore5">Mata katten</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4 id="prio5">Prio 2</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-primary" id="add5">Klart</button>
-                                        <button class="btn btn-danger" id="remove5">Ta bort</button>
-                                    </div>
-                                </li>
+                                
                             </ul>
                         </div>
                     </div>
+                    <button class="btn btn-primary w-100 m-1" id="alphbutton">Sortera i bokstavsordning</button>
+                    <button class="btn btn-secondary w-100 m-1" id="priobutton">Sortera i prioritetsordning</button>
                 </div>
                 <div class="box col-10 col-lg-5 border border-success">
                     <div class="row">
@@ -112,38 +50,14 @@
                             </h3>
                         </div>
                         <div class="col-12 d-flex justify-content-between">
-                            <!-- ITEM 1 -->
                             <ul class="d-flex flex-column justify-content-between" id="donelist">
-                                <!-- <li class="d-flex justify-content-between">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4>Sova</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4>Prio 1</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-warning" id="regret1">Ångra</button>
-                                        <button class="btn btn-danger" id="remove4">Ta bort</button>
-                                    </div>
-                                </li>
-                                <li class="d-flex justify-content-between">
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4>Rensa avloppet</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <h4>Prio 3</h4>
-                                    </div>
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <button class="btn btn-warning">Ångra</button>
-                                        <button class="btn btn-danger">Ta bort</button>
-                                    </div>
-                                </li> -->
+                                
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center m-0">
                 <div class="box col-10 border border-warning d-flex flex-column align-items-center">
                     <div class="col-12 d-flex justify-content-center">
                         <h3>
@@ -154,7 +68,7 @@
                         <form class="row g-6 needs-validation justify-content-center" novalidate>
                             <div class="col-12 col-lg-4">
                                 <label for="chore" class="form-label">Syssla</label>
-                                <input type="text" class="form-control" id="chore" required>
+                                <input type="text" class="form-control" id="chore" placeholder="Till exempel 'Tvätta'" required>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <label for="priority" class="form-label">Prioritet</label>
@@ -162,6 +76,8 @@
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
+                                    <option value="5">4</option>
+                                    <option value="5">5</option>
                                   </select>
                             </div>
                             <div class="row justify-content-center">
