--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </h3>
                         </div>
                         <div class="col-12 d-flex justify-content-center">
-                            <ul id="dolist">
+                            <ul class="d-flex flex-column justify-content-between" id="dolist">
                                 
                             </ul>
                         </div>
@@ -49,7 +49,7 @@
                                 Klart
                             </h3>
                         </div>
-                        <div class="col-12 d-flex justify-content-between">
+                        <div class="col-12 d-flex justify-content-center">
                             <ul class="d-flex flex-column justify-content-between" id="donelist">
                                 
                             </ul>
