--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    
 </head>
 <body>
     <div class="container-fluid p-0">
         <!-- HEADER -->
         <header>
             <div class="row p-0 m-0">
-                <div class="col-12 test d-flex justify-content-center align-items-center">
+                <div class="col-12 header d-flex justify-content-center align-items-center">
                     <h1>
                         To-do list
                     </h1>
                 </div>
             </div>
         </header>
-        <main>
+        <main id="main">
             <!-- MAIN -->
+            <div class="row justify-content-center" id="doneWrapper"></div>
             <div class="row justify-content-evenly m-0">
                 <div class="box col-10 col-lg-5 border border-danger">
                     <div class="row">
@@ -65,7 +67,7 @@
                         </h3>
                     </div>
                     <div class="col-10">
-                        <form class="row g-6 needs-validation justify-content-center" novalidate>
+                        <form class="row g-6 needs-validation justify-content-center">
                             <div class="col-12 col-lg-4">
                                 <label for="chore" class="form-label">Syssla</label>
                                 <input type="text" class="form-control" id="chore" placeholder="Till exempel 'Tvätta'" required>
