--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
         <main id="main">
             <!-- MAIN -->
-            <div class="row justify-content-center" id="doneWrapper"></div>
+            <div class="row justify-content-center m-0" id="doneWrapper"></div>
             <div class="row justify-content-evenly m-0">
                 <div class="box col-10 col-lg-5 border border-danger">
                     <div class="row">
