--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <button class="btn btn-primary w-100 m-1" id="alphbutton">Sortera i bokstavsordning</button>
                     <button class="btn btn-secondary w-100 m-1" id="priobutton">Sortera i prioritetsordning</button>
                 </div>
+                <!-- RIGHT BOX -->
                 <div class="box col-10 col-lg-5 border border-success">
                     <div class="row">
                         <div class="col-12 d-flex justify-content-center">
@@ -60,6 +61,7 @@
                 </div>
             </div>
             <div class="row justify-content-center m-0">
+                <!-- BOTTOM BOX -->
                 <div class="box col-10 border border-warning d-flex flex-column align-items-center">
                     <div class="col-12 d-flex justify-content-center">
                         <h3>
